<resources>
    <string name="app_name">MotionLayout</string>
    <string name="animation1">Animation1</string>
    <string name="Animation1">animation1</string>
    <string name="Animation2">animation2</string>
    <string name="Animation3">animation3</string>
    <string name="Animation4">animation4</string>
    <string name="Animation5">animation5</string>
    <string name="Animation6">animation6</string>
    <string name="the_labrador_retriever_was_bred_to_be_both_a_friendly_companion_and_a_useful_working_dog_breed_historically_they_earned_their_keep_as_fishermen_s_helpers_hauling_nets_fetching_ropes_and_retrieving_fish_from_the_chilly_north_atlantic">The Labrador Retriever was bred to be both a friendly companion and a useful working dog breed. Historically, they earned their keep as fishermen’s helpers: hauling nets, fetching ropes, and retrieving fish from the chilly North Atlantic.</string>
    <string name="explore_the_labrador">Explore the Labrador</string>
    <string name="button">Button</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="nine">nine</string>
    <string name="asterisk">asterisk</string>
    <string name="zero">zero</string>
    <string name="sharp">sharp</string>
    <string name="fourth">fourth</string>
    <string name="third">third</string>
    <string name="second">second</string>
    <string name="first">first</string>
    <string name="swipe">swipe</string>
    <string name="california">california</string>
    <string name="sight_seeing">sight_seeing</string>
    <string name="directions">directions</string>
    <string name="information">information</string>
    <string name="monterey">monterey</string>
    <string name="mumbai">Mumbai</string>
    <string name="first_fragment">first_fragment</string>
    <string name="fourth_fragment">fourth_fragment</string>
    <string name="second_fragment">second_fragment</string>
    <string name="third_fragment">third_fragment</string>
    <string name="india">India</string>
</resources>