<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="start"
    android:layout_height="match_parent"
    android:layout_width="180dp"
    android:id="@+id/menu"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        android:textColor="#FFF" android:typeface="serif"
        android:textStyle="italic" android:textSize="20sp"
        android:text="@string/mumbai"
        android:layout_marginTop="32dp"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        android:textColor="#FFF"
        android:text="@string/information"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:fontFamily="sans-serif-smallcaps"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        android:textColor="#FFF"
        android:text="@string/directions" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" app:fontFamily="sans-serif-smallcaps"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#FFF"
        android:text="@string/sight_seeing"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:background="#c2c1c1"
        android:layout_height="1dp"
        android:layout_width="100dp"
        android:id="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:id="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view"
        android:textColor="#FFF"
        android:text="@string/india"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:fontFamily="cursive"/>

</androidx.constraintlayout.widget.ConstraintLayout>